--- a/html/css/foundation.css
+++ b/html/css/foundation.css
@@ -1120,7 +1120,7 @@ select {
   padding: 0.875rem 1.5rem 0.875rem 0.875rem;
   font-size: 0.8125rem;
   transition: opacity 300ms ease-out;
-  background-color: #008cba;
+  background-color: #32aebd;
   border-color: #0078a0;
   color: white; }
   .alert-box .close {
@@ -1482,11 +1482,11 @@ select {
     font-size: 0.6875rem;
     line-height: 0.6875rem;
     text-transform: uppercase;
-    color: #008cba; }
+    color: #32aebd; }
     .breadcrumbs > *:hover a, .breadcrumbs > *:focus a {
       text-decoration: underline; }
     .breadcrumbs > * a {
-      color: #008cba; }
+      color: #32aebd; }
     .breadcrumbs > *.current {
       cursor: default;
       color: #333333; }
@@ -1537,7 +1537,7 @@ button, .button {
   padding-bottom: 1.0625rem;
   padding-left: 2rem;
   font-size: 1rem;
-  background-color: #008cba;
+  background-color: #32aebd;
   border-color: #007095;
   color: white;
   transition: background-color 300ms ease-out; }
@@ -1602,7 +1602,7 @@ button, .button {
   button.round, .button.round {
     border-radius: 1000px; }
   button.disabled, button[disabled], .button.disabled, .button[disabled] {
-    background-color: #008cba;
+    background-color: #32aebd;
     border-color: #007095;
     color: white;
     cursor: default;
@@ -1613,7 +1613,7 @@ button, .button {
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
       color: white; }
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #008cba; }
+      background-color: #32aebd; }
     button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
       background-color: #e7e7e7;
       border-color: #b9b9b9;
@@ -2974,7 +2974,7 @@ label.error {
       width: 1.875rem;
       height: 1.875rem; }
   .icon-bar > *:hover {
-    background: #008cba; }
+    background: #32aebd; }
   .icon-bar > * label {
     color: white; }
   .icon-bar > * i {
@@ -3225,7 +3225,7 @@ kbd {
   margin-bottom: inherit;
   padding: 0.25rem 0.5rem 0.375rem;
   font-size: 0.6875rem;
-  background-color: #008cba;
+  background-color: #32aebd;
   color: white; }
   .label.radius {
     border-radius: 3px; }
@@ -3521,12 +3521,12 @@ ul.pagination {
     ul.pagination li.unavailable:hover a, ul.pagination li.unavailable a:focus, ul.pagination li.unavailable:hover button, ul.pagination li.unavailable button:focus {
       background: transparent; }
     ul.pagination li.current a, ul.pagination li.current button {
-      background: #008cba;
+      background: #32aebd;
       color: white;
       font-weight: bold;
       cursor: default; }
       ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
-        background: #008cba; }
+        background: #32aebd; }
   ul.pagination li {
     float: left;
     display: block; }
@@ -3576,7 +3576,7 @@ ul.pagination {
       .panel.callout h1.subheader, .panel.callout h2.subheader, .panel.callout h3.subheader, .panel.callout h4.subheader, .panel.callout h5.subheader, .panel.callout h6.subheader {
         line-height: 1.4; }
     .panel.callout a:not(.button) {
-      color: #008cba; }
+      color: #32aebd; }
   .panel.radius {
     border-radius: 3px; }
 
@@ -3634,7 +3634,7 @@ ul.pagination {
   padding: 0.125rem;
   margin-bottom: 0.625rem; }
   .progress .meter {
-    background: #008cba;
+    background: #32aebd;
     height: 100%;
     display: block; }
   .progress.secondary .meter {
@@ -3693,7 +3693,7 @@ ul.pagination {
     background: #fafafa;
     border-radius: 3px; }
     .range-slider.radius .range-slider-handle {
-      background: #008cba;
+      background: #32aebd;
       border-radius: 3px; }
       .range-slider.radius .range-slider-handle:hover {
         background: #007ba4; }
@@ -3701,7 +3701,7 @@ ul.pagination {
     background: #fafafa;
     border-radius: 1000px; }
     .range-slider.round .range-slider-handle {
-      background: #008cba;
+      background: #32aebd;
       border-radius: 1000px; }
       .range-slider.round .range-slider-handle:hover {
         background: #007ba4; }
@@ -3710,7 +3710,7 @@ ul.pagination {
     cursor: default;
     opacity: 0.7; }
     .range-slider.disabled .range-slider-handle, .range-slider[disabled] .range-slider-handle {
-      background: #008cba;
+      background: #32aebd;
       cursor: default;
       opacity: 0.7; }
       .range-slider.disabled .range-slider-handle:hover, .range-slider[disabled] .range-slider-handle:hover {
@@ -3731,7 +3731,7 @@ ul.pagination {
   height: 1.375rem;
   border: 1px solid none;
   cursor: pointer;
-  background: #008cba; }
+  background: #32aebd; }
   .range-slider-handle:hover {
     background: #007ba4; }
 
@@ -3874,7 +3874,7 @@ dialog::backdrop {
     font-size: 0.875rem; }
     .side-nav li a:not(.button) {
       display: block;
-      color: #008cba;
+      color: #32aebd;
       margin: 0;
       padding: 0.4375rem 0.875rem; }
       .side-nav li a:not(.button):hover, .side-nav li a:not(.button):focus {
@@ -3891,7 +3891,7 @@ dialog::backdrop {
       list-style: none;
       border-top-color: white; }
     .side-nav li.heading {
-      color: #008cba;
+      color: #32aebd;
       font-size: 0.875rem;
       font-weight: bold;
       text-transform: uppercase; }
@@ -4014,7 +4014,7 @@ dialog::backdrop {
     .sub-nav li.active a {
       border-radius: 3px;
       font-weight: normal;
-      background: #008cba;
+      background: #32aebd;
       padding: 0.1875rem 1rem;
       cursor: default;
       color: white; }
@@ -4055,7 +4055,7 @@ div.switch label:after {
   -moz-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
 div.switch input:checked + label {
-  background: #008cba; }
+  background: #32aebd; }
 div.switch input:checked + label:after {
   left: 2.25rem; }
 div.switch label {
@@ -4072,7 +4072,7 @@ div.switch label {
 div.switch label:after {
   background: white; }
 div.switch input:checked + label {
-  background: #008cba; }
+  background: #32aebd; }
 div.switch.large label {
   width: 5rem;
   height: 2.5rem; }
@@ -4309,7 +4309,7 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #008cba;
+  color: #32aebd;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
@@ -4707,7 +4707,7 @@ blockquote p {
   color: #333333; }
   .has-tip:hover, .has-tip:focus {
     border-bottom: dotted 1px #003f54;
-    color: #008cba; }
+    color: #32aebd; }
   .has-tip.tip-left, .has-tip.tip-right {
     float: none !important; }
 
@@ -4744,7 +4744,7 @@ blockquote p {
     .tooltip.round > .nub {
       left: 2rem; }
   .tooltip.opened {
-    color: #008cba !important;
+    color: #32aebd !important;
     border-bottom: dotted 1px #003f54 !important; }
 
 .tap-to-close {
@@ -4926,7 +4926,7 @@ meta.foundation-mq-topbar {
         font-size: 0.8125rem;
         padding-right: 15px;
         padding-left: 15px;
-        background-color: #008cba;
+        background-color: #32aebd;
         border-color: #007095;
         color: white; }
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
@@ -4961,7 +4961,7 @@ meta.foundation-mq-topbar {
       font-size: 0.8125rem;
       padding-right: 15px;
       padding-left: 15px;
-      background-color: #008cba;
+      background-color: #32aebd;
       border-color: #007095;
       color: white; }
       .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
@@ -4997,7 +4997,7 @@ meta.foundation-mq-topbar {
       background: #272727;
       color: white; }
     .top-bar-section ul li.active > a {
-      background: #008cba;
+      background: #32aebd;
       color: white; }
       .top-bar-section ul li.active > a:hover {
         background: #0078a0;
@@ -5131,7 +5131,7 @@ meta.foundation-mq-topbar {
       padding: 0 15px;
       line-height: 45px;
       color: white;
-      background: #008cba; }
+      background: #32aebd; }
       .top-bar-section li.active:not(.has-form) a:not(.button):hover {
         background: #0078a0;
         color: white; }
@@ -5222,7 +5222,7 @@ meta.foundation-mq-topbar {
     background: #272727;
     color: white; }
   .no-js .top-bar-section ul li:active > a {
-    background: #008cba;
+    background: #32aebd;
     color: white; }
   .no-js .top-bar-section .has-dropdown:hover > .dropdown {
     display: block;
