--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -222,9 +222,13 @@ a:hover {
 background-color: transparent;	
 }
 
+#frontpage-topbar {
+	max-width: 900px;
+}
+
 .top-bar {
 	background-color: transparent;
-	max-width: 900px;
+	
 	margin: 0px auto;
 
 	.top-bar-section {
@@ -651,37 +655,61 @@ margin-bottom: 30px;
 	}
 }
 
+a.show {
+	color: white;
+
+	:hover {
+		color: $primary-color;
+	}
+}
+
 
 
 /* -----------------------------------------
    Backend Styles
 ----------------------------------------- */
 
-aside {
+.icon-bar {
+	background-color: $secondary-color;
+	border-bottom: 5px solid $primary-color;
 
-	#thumb {
-		width: 100%;
-		z-index: 2;
-	}	
-
-	#overlay-name {
-		background-color: black;
-		opacity: 0.7;
-		color: white;
-		position: relative;
-		bottom: 30px;
-		padding: 8px;
-		text-align: center;
-		z-index: 3;
-		font-weight: 300;
-		letter-spacing: 1px;
-	}
-
-	#logo-dark {
-		width: 70px;
-		padding-top: 30px;
+	a.active {
+		background-color: $primary-color;
 	}
 }
+
+
+
+#backend-nav{
+	.top-bar {
+		background-color: $secondary-color;		
+	}
+}
+
+
+#thumb {
+	width: 100%;
+	z-index: 2;
+}	
+
+#overlay-name {
+	background-color: black;
+	opacity: 0.7;
+	color: white;
+	position: relative;
+	bottom: 40px;
+	padding: 8px;
+	text-align: center;
+	z-index: 3;
+	font-weight: 300;
+	letter-spacing: 1px;
+}
+
+#logo-dark {
+	width: 70px;
+	padding-top: 30px;
+}
+
 
 .tab-bar {
 	border-bottom: 5px solid $primary-color;
@@ -709,8 +737,7 @@ aside {
 }
 
 .main-section {
-	padding: 30px;
-	max-width: 100%;
+padding: 20px 20px 40px 40px;
 }
 
 /* -----------------------------------------
@@ -999,8 +1026,12 @@ aside {
 	}
 
 	#more-comments {
-		position: relative;
-		bottom: -80px;
+		font-size: 2em;
+		color: $lightgrey;
+	}
+
+	:hover {
+		color: $primary-color;
 	}
 }
 
